fix bug & add function view.wrap()

--- a/demo/layout-operation/index.scss
+++ b/demo/layout-operation/index.scss
@@ -1,16 +1,20 @@
 @charset "utf-8";
 @import "../../src/style/style";
+
 * {
 	padding: 0;
 	margin:  0;
 }
+
 html, body {
 	height: 100%;
 }
+
 // font
 body, button {
 	font-family: Tahoma, "微软雅黑";
 }
+
 // layout
 .everything {
 	width:          100%;
@@ -47,23 +51,24 @@ body, button {
 		height:      100%;
 	}
 }
+
+// border & padding
 .main {
 	> :first-child {
-		height: 100%;
+		height: 80%;
 	}
 
-	.linear[data-direction=row] {
-		> .view {
-			border-right: 1px solid #000;
-		}
-		> .view:nth-last-of-type(1) {
-			border-right: none;
-		}
-	}
-	.linear[data-direction=column] {
-		> .view {
-			border-bottom: 1px solid #000;
-		}
+	.view {
+		border: 1px solid #000;
 	}
 
+	.linear {
+		border:  1px solid green;
+		padding: 15px;
+	}
+
+	.simple:hover {
+		background: red;
+		cursor:     pointer;
+	}
 }
